Removed remember me and forgot password.

--- a/login.html
+++ b/login.html
@@ -165,10 +165,10 @@
           </div>
         </div>
 
-        <div class="row-inline">
+        <!-- <div class="row-inline">
           <label class="remember"><input type="checkbox" id="rememberMe"> Remember me</label>
           <div class="forgot"><a href="#">Forgot password?</a></div>
-        </div>
+        </div> -->
 
         <button type="submit" class="btn-primary" id="loginBtn"><i class="fas fa-sign-in-alt"></i> Sign in</button>
 
